--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -8,20 +8,158 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from scipy.io import loadmat\n",
+    "# from scipy.io import loadmat\n",
     "import sys\n",
     "from pathlib import Path\n",
     "sys.path.append(\"..\") \n",
     "import platform\n",
     "import os\n",
-    "from pathlib import Path"
+    "from pathlib import Path\n",
+    "import shutil\n",
+    "from utils.basics.data_org import curr_computer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def move_subfolders(dir1, dir2, subfolders=None):\n",
+    "    \"\"\"\n",
+    "    Moves specified subfolders from dir1 to dir2 if they exist.\n",
+    "    If no subfolders are specified, moves all subfolders.\n",
+    "\n",
+    "    :param dir1: Source directory\n",
+    "    :param dir2: Destination directory\n",
+    "    :param subfolders: List of subfolder names to move (optional)\n",
+    "    \"\"\"\n",
+    "    # Ensure the destination directory exists\n",
+    "    os.makedirs(dir2, exist_ok=True)\n",
+    "    \n",
+    "    # Get the list of subfolders to move\n",
+    "    if subfolders is None:\n",
+    "        # Move all subfolders\n",
+    "        subfolders = [d for d in os.listdir(dir1) if os.path.isdir(os.path.join(dir1, d))]\n",
+    "    \n",
+    "    # Move each subfolder if it exists\n",
+    "    for subfolder in subfolders:\n",
+    "        src_path = os.path.join(dir1, subfolder)\n",
+    "        dest_path = os.path.join(dir2, subfolder)\n",
+    "        if os.path.exists(src_path) and os.path.isdir(src_path):\n",
+    "            shutil.copytree(src_path, dest_path, dirs_exist_ok=True)\n",
+    "            print(f\"Copied: {src_path} -> {dest_path}\")\n",
+    "        else:\n",
+    "            print(f\"Subfolder not found: {src_path}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current session: m743986d20241203\n",
+      "Moved: E:\\743986\\m743986d20241203\\behavior -> C:\\Users\\svc_aind_behavior\\Documents\\sueData\\743986\\m743986d20241203\\behavior\n",
+      "Moved: E:\\743986\\m743986d20241203\\pupil -> C:\\Users\\svc_aind_behavior\\Documents\\sueData\\743986\\m743986d20241203\\pupil\n",
+      "Current session: m743986d20241204\n",
+      "Moved: E:\\743986\\m743986d20241204\\behavior -> C:\\Users\\svc_aind_behavior\\Documents\\sueData\\743986\\m743986d20241204\\behavior\n",
+      "Moved: E:\\743986\\m743986d20241204\\pupil -> C:\\Users\\svc_aind_behavior\\Documents\\sueData\\743986\\m743986d20241204\\pupil\n",
+      "Current session: m743986d20241206\n",
+      "Moved: E:\\743986\\m743986d20241206\\behavior -> C:\\Users\\svc_aind_behavior\\Documents\\sueData\\743986\\m743986d20241206\\behavior\n",
+      "Moved: E:\\743986\\m743986d20241206\\pupil -> C:\\Users\\svc_aind_behavior\\Documents\\sueData\\743986\\m743986d20241206\\pupil\n",
+      "Current session: m743986d20241209\n",
+      "Moved: E:\\743986\\m743986d20241209\\behavior -> C:\\Users\\svc_aind_behavior\\Documents\\sueData\\743986\\m743986d20241209\\behavior\n",
+      "Moved: E:\\743986\\m743986d20241209\\pupil -> C:\\Users\\svc_aind_behavior\\Documents\\sueData\\743986\\m743986d20241209\\pupil\n",
+      "Current session: m743986d20241210\n",
+      "Moved: E:\\743986\\m743986d20241210\\behavior -> C:\\Users\\svc_aind_behavior\\Documents\\sueData\\743986\\m743986d20241210\\behavior\n",
+      "Moved: E:\\743986\\m743986d20241210\\pupil -> C:\\Users\\svc_aind_behavior\\Documents\\sueData\\743986\\m743986d20241210\\pupil\n",
+      "Current session: m743986d20241213\n",
+      "Moved: E:\\743986\\m743986d20241213\\behavior -> C:\\Users\\svc_aind_behavior\\Documents\\sueData\\743986\\m743986d20241213\\behavior\n",
+      "Moved: E:\\743986\\m743986d20241213\\pupil -> C:\\Users\\svc_aind_behavior\\Documents\\sueData\\743986\\m743986d20241213\\pupil\n",
+      "Current session: m743986d20241218\n",
+      "Moved: E:\\743986\\m743986d20241218\\behavior -> C:\\Users\\svc_aind_behavior\\Documents\\sueData\\743986\\m743986d20241218\\behavior\n",
+      "Moved: E:\\743986\\m743986d20241218\\pupil -> C:\\Users\\svc_aind_behavior\\Documents\\sueData\\743986\\m743986d20241218\\pupil\n",
+      "Current session: m743986d20241219\n",
+      "Moved: E:\\743986\\m743986d20241219\\behavior -> C:\\Users\\svc_aind_behavior\\Documents\\sueData\\743986\\m743986d20241219\\behavior\n",
+      "Moved: E:\\743986\\m743986d20241219\\pupil -> C:\\Users\\svc_aind_behavior\\Documents\\sueData\\743986\\m743986d20241219\\pupil\n",
+      "Current session: m743986d20241220\n",
+      "Moved: E:\\743986\\m743986d20241220\\behavior -> C:\\Users\\svc_aind_behavior\\Documents\\sueData\\743986\\m743986d20241220\\behavior\n"
+     ]
+    }
+   ],
+   "source": [
+    "animal_list = ['743986', '752703']\n",
+    "root = curr_computer()\n",
+    "target_root = r'C:\\Users\\svc_aind_behavior\\Documents\\sueData'\n",
+    "all_sessions_dir = []\n",
+    "for animal in animal_list:\n",
+    "    curr_sessions = [session for session in os.listdir(os.path.join(root, animal)) if os.path.isdir(os.path.join(root, animal, session))]\n",
+    "    for session in curr_sessions:\n",
+    "        curr_dir = os.path.join(root, animal, session)\n",
+    "        target_dir = os.path.join(target_root, animal, session)\n",
+    "        print(f\"Current session: {session}\")\n",
+    "        if not os.path.exists(target_dir):\n",
+    "            os.makedirs(target_dir)\n",
+    "        move_subfolders(curr_dir, target_dir, subfolders=['behavior', 'pupil'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[WinError 3] The system cannot find the path specified: 'Z:\\\\'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[11], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mmove_subfolders\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mE:\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43m752703\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mm752703d20241204\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mZ:\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43msueSu\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43m752703\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43mm752703d20241204\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msubfolders\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mbehavior\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mpupil\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[9], line 11\u001b[0m, in \u001b[0;36mmove_subfolders\u001b[1;34m(dir1, dir2, subfolders)\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;124;03mMoves specified subfolders from dir1 to dir2 if they exist.\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;124;03mIf no subfolders are specified, moves all subfolders.\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;124;03m:param subfolders: List of subfolder names to move (optional)\u001b[39;00m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m     10\u001b[0m \u001b[38;5;66;03m# Ensure the destination directory exists\u001b[39;00m\n\u001b[1;32m---> 11\u001b[0m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmakedirs\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdir2\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mexist_ok\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;66;03m# Get the list of subfolders to move\u001b[39;00m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m subfolders \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m     15\u001b[0m     \u001b[38;5;66;03m# Move all subfolders\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\svc_aind_behavior\\AppData\\Local\\anaconda3\\envs\\playground\\lib\\os.py:215\u001b[0m, in \u001b[0;36mmakedirs\u001b[1;34m(name, mode, exist_ok)\u001b[0m\n\u001b[0;32m    213\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m head \u001b[38;5;129;01mand\u001b[39;00m tail \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m path\u001b[38;5;241m.\u001b[39mexists(head):\n\u001b[0;32m    214\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 215\u001b[0m         \u001b[43mmakedirs\u001b[49m\u001b[43m(\u001b[49m\u001b[43mhead\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mexist_ok\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mexist_ok\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    216\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mFileExistsError\u001b[39;00m:\n\u001b[0;32m    217\u001b[0m         \u001b[38;5;66;03m# Defeats race condition when another thread created the path\u001b[39;00m\n\u001b[0;32m    218\u001b[0m         \u001b[38;5;28;01mpass\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\svc_aind_behavior\\AppData\\Local\\anaconda3\\envs\\playground\\lib\\os.py:215\u001b[0m, in \u001b[0;36mmakedirs\u001b[1;34m(name, mode, exist_ok)\u001b[0m\n\u001b[0;32m    213\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m head \u001b[38;5;129;01mand\u001b[39;00m tail \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m path\u001b[38;5;241m.\u001b[39mexists(head):\n\u001b[0;32m    214\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 215\u001b[0m         \u001b[43mmakedirs\u001b[49m\u001b[43m(\u001b[49m\u001b[43mhead\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mexist_ok\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mexist_ok\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    216\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mFileExistsError\u001b[39;00m:\n\u001b[0;32m    217\u001b[0m         \u001b[38;5;66;03m# Defeats race condition when another thread created the path\u001b[39;00m\n\u001b[0;32m    218\u001b[0m         \u001b[38;5;28;01mpass\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\svc_aind_behavior\\AppData\\Local\\anaconda3\\envs\\playground\\lib\\os.py:215\u001b[0m, in \u001b[0;36mmakedirs\u001b[1;34m(name, mode, exist_ok)\u001b[0m\n\u001b[0;32m    213\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m head \u001b[38;5;129;01mand\u001b[39;00m tail \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m path\u001b[38;5;241m.\u001b[39mexists(head):\n\u001b[0;32m    214\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 215\u001b[0m         \u001b[43mmakedirs\u001b[49m\u001b[43m(\u001b[49m\u001b[43mhead\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mexist_ok\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mexist_ok\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    216\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mFileExistsError\u001b[39;00m:\n\u001b[0;32m    217\u001b[0m         \u001b[38;5;66;03m# Defeats race condition when another thread created the path\u001b[39;00m\n\u001b[0;32m    218\u001b[0m         \u001b[38;5;28;01mpass\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\svc_aind_behavior\\AppData\\Local\\anaconda3\\envs\\playground\\lib\\os.py:225\u001b[0m, in \u001b[0;36mmakedirs\u001b[1;34m(name, mode, exist_ok)\u001b[0m\n\u001b[0;32m    223\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m\n\u001b[0;32m    224\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 225\u001b[0m     \u001b[43mmkdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mname\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmode\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    226\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mOSError\u001b[39;00m:\n\u001b[0;32m    227\u001b[0m     \u001b[38;5;66;03m# Cannot rely on checking for EEXIST, since the operating system\u001b[39;00m\n\u001b[0;32m    228\u001b[0m     \u001b[38;5;66;03m# could give priority to other errors like EACCES or EROFS\u001b[39;00m\n\u001b[0;32m    229\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m exist_ok \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m path\u001b[38;5;241m.\u001b[39misdir(name):\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 3] The system cannot find the path specified: 'Z:\\\\'"
+     ]
+    }
+   ],
+   "source": [
+    "move_subfolders(r'E:\\752703\\m752703d20241204', r'Z:\\sueSu\\752703\\m752703d20241204', subfolders=['behavior', 'pupil'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shutil.copy(src_path, dest_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'scipy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mbasics\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdata_org\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m curr_computer\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mbehavior\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01msession_utils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mephys\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mneuron_utils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n",
+      "File \u001b[1;32mc:\\Users\\svc_aind_behavior\\Documents\\GitHub\\aind_su_etal_2022\\notebooks\\..\\utils\\behavior\\session_utils.py:3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mscipy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mstats\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mstats\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcollections\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m defaultdict\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtyping\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m List, Dict, Any\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'scipy'"
+     ]
+    }
+   ],
    "source": [
     "from utils.basics.data_org import curr_computer\n",
     "from utils.behavior.session_utils import *\n",
@@ -172,7 +310,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "playGround",
+   "display_name": "playground",
    "language": "python",
    "name": "python3"
   },
