--- a/notebooks/ephys_reorg_opto_data.ipynb
+++ b/notebooks/ephys_reorg_opto_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,8 +17,9 @@
     "import shutil\n",
     "from pathlib import Path\n",
     "import shutil\n",
-    "from utils.behavior.session_utils import load_session_df, parse_session_string\n",
+    "from utils.behavior.session_utils import load_session_df, parse_session_string, load_df_from_mat, load_neurons_from_mat\n",
     "from utils.behavior.lick_analysis import clean_up_licks, parse_lick_trains\n",
+    "from utils.ephys.neuron_utils import load_neuron_df, load_neurons_from_mat\n",
     "from scipy.io import loadmat\n",
     "from itertools import chain\n",
     "from matplotlib import pyplot as plt\n",
@@ -41,10 +42,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "root = curr_computer()\n",
+    "anis = ['ZS059', 'ZS060', 'ZS061', 'ZS062']\n",
+    "for ani in anis: \n",
+    "    opto_units_spreadsheet = pd.read_excel(os.path.join(root, ani+'.xlsx'), sheet_name='neurons')\n",
+    "    session_list = opto_units_spreadsheet['session'].unique().tolist()\n",
+    "    for session in session_list:\n",
+    "        path_data = parse_session_string(session)\n",
+    "        opto_neuron_df = opto_units_spreadsheet[(opto_units_spreadsheet['session'] == session)].copy()\n",
+    "        opto_neuron_df.reset_index(drop=True, inplace=True)\n",
+    "        _, _, _, neuron_df = load_neuron_df(session)\n",
+    "        opto_neuron_df['spike_times'] = None\n",
+    "        for index, id in enumerate(opto_neuron_df['ID']):\n",
+    "            # add spike times to the opto_neuron_df\n",
+    "            # spike_times = neuron_df[neuron_df['unit'] == id]['spike_times'].values[0]\n",
+    "            opto_neuron_df.at[index, 'spike_times'] = neuron_df[neuron_df['unit'] == id]['spike_times'].values\n",
+    "            # load quality metrics\n",
+    "            if opto_neuron_df.loc[index, 'Lratio']<=0.05:\n",
+    "                file_name = f\"{session}_{id}_met.mat\"\n",
+    "                unit_qm_mat = os.path.join(path_data['nlynxFolderSession'], file_name)\n",
+    "                unit_qm = loadmat(unit_qm_mat)\n",
+    "                unit_qm['met'].dtype.names\n",
+    "\n",
+    "                for key in unit_qm['met'].dtype.names:\n",
+    "                    if key == 'width':\n",
+    "                        new_key = 'width_opto'\n",
+    "                    else:\n",
+    "                        new_key = key\n",
+    "                    if new_key not in opto_neuron_df.columns:\n",
+    "                        opto_neuron_df[new_key] = None\n",
+    "                    opto_neuron_df.at[index, new_key] = np.squeeze(unit_qm['met'][key][0][0])\n",
+    "                if 'metSess' in unit_qm.keys():\n",
+    "                    for key in unit_qm['metSess'].dtype.names:\n",
+    "                        if key == 'width':\n",
+    "                            new_key = 'width_session'\n",
+    "                        else:\n",
+    "                            new_key = key\n",
+    "                        if new_key not in opto_neuron_df.columns:\n",
+    "                            opto_neuron_df[new_key] = None\n",
+    "                        opto_neuron_df.at[index, new_key] = np.squeeze(unit_qm['metSess'][key][0][0])    \n",
+    "        save_file = os.path.join(path_data['sortedFolder'], f\"{session}_opto_units.pkl\")\n",
+    "        opto_neuron_df.drop(columns=['ID.1'], inplace=True)\n",
+    "        opto_neuron_df.rename(columns={'ID': 'unit'}, inplace=True)\n",
+    "        with open(save_file, 'wb') as f:\n",
+    "            pickle.dump(opto_neuron_df, f)\n",
+    "\n",
+    "# opto_units_spreadsheet.to_excel(os.path.join(root, ani+'_opto_units.xlsx'), index=False)          "
+   ]
   }
  ],
  "metadata": {
@@ -54,7 +102,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.0"
   }
  },
