Update behavior model

--- a/notebooks/photometry_analysis_prep_motion.ipynb
+++ b/notebooks/photometry_analysis_prep_motion.ipynb
@@ -53,12 +53,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Region mPFC recorded at fiber 0\n",
+      "Region CrusI recorded at fiber 1\n",
+      "Region LC recorded at fiber 2\n",
+      "Region mPFC recorded at fiber 0\n",
+      "Region CrusI recorded at fiber 1\n",
+      "Region LC recorded at fiber 2\n",
+      "Channel G:Region mPFC recorded at fiber 0\n",
+      "Channel G:Region CrusI recorded at fiber 1\n",
+      "Channel G:Region LC recorded at fiber 2\n",
+      "Channel Iso:Region mPFC recorded at fiber 0\n",
+      "Channel Iso:Region CrusI recorded at fiber 1\n",
+      "Channel Iso:Region LC recorded at fiber 2\n"
+     ]
+    }
+   ],
    "source": [
-    "session = 'm749472d20241230'\n",
-    "label = 'Gi'\n",
+    "session = 'm699462d20240104'\n",
+    "label = 'CombineWithKH'\n",
     "session_dir = parse_session_string(session)\n",
     "session_df, licks_L, licks_R = load_session_df(session)\n",
     "licks_L, licks_R, fig = clean_up_licks(licks_L, licks_R, plot=False)\n",
@@ -66,7 +85,7 @@
     "parsed_licks_R, _ = parse_lick_trains(licks_R)\n",
     "signal_region = load_session_FP(session, label, plot=False);\n",
     "signal_region_raw = load_session_FP_raw(session, label, plot=False);\n",
-    "signal_pre = preprocess_signal(session, label, fs = 20, lowcut = 0.1, fc = 9, xtol=1e-6, plot=True)"
+    "# signal_pre = preprocess_signal(session, label, fs = 20, lowcut = 0.1, fc = 9, xtol=1e-6, plot=True)"
    ]
   },
   {
@@ -82,8 +101,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "signal_region_prep_CO, params, figs = preprocess_signal_CO(session, label, plot=True, xtol=1e-8)"
+    "signal_region_prep_CO, params, figs = preprocess_signal_CO(session, label, plot=True, xtol=1e-10, methods=['tri-exp'])\n",
+    "append_FP_data(session, label, signal_region_prep_CO, params)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded m699461d20231222_combined.pkl and m699461d20231222_combined_params.pkl\n",
+      "Finished writing m699461d20231222_combined.pkl\n",
+      "Finished writing m699461d20231222_combined_params.pkl\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -111,12 +148,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "session_list = get_session_list('photometry', 'all', 'crusIgood')\n",
-    "label = 'CombinedWithKH'"
+    "label = 'CombineWithKH'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "session_list = get_session_list('photometry_Gi', 'all', 'Gi_G8')\n",
+    "label = 'Gi'"
    ]
   },
   {
@@ -128,9 +175,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded m699461d20231217_combined.pkl and m699461d20231217_combined_params.pkl\n",
+      "Loaded m699461d20231218_combined.pkl and m699461d20231218_combined_params.pkl\n",
+      "Loaded m699461d20231219_combined.pkl and m699461d20231219_combined_params.pkl\n",
+      "Loaded m699461d20231220_combined.pkl and m699461d20231220_combined_params.pkl\n",
+      "Loaded m699461d20231222_combined.pkl and m699461d20231222_combined_params.pkl\n",
+      "Loaded m699461d20240102_combined.pkl and m699461d20240102_combined_params.pkl\n",
+      "Loaded m699461d20240103_combined.pkl and m699461d20240103_combined_params.pkl\n",
+      "Loaded m699461d20240104_combined.pkl and m699461d20240104_combined_params.pkl\n",
+      "Loaded m699461d20240105_combined.pkl and m699461d20240105_combined_params.pkl\n",
+      "Loaded m699461d20240106_combined.pkl and m699461d20240106_combined_params.pkl\n",
+      "Loaded m699461d20240107_combined.pkl and m699461d20240107_combined_params.pkl\n",
+      "Loaded m699461d20240116_combined.pkl and m699461d20240116_combined_params.pkl\n",
+      "Loaded m699461d20240117_combined.pkl and m699461d20240117_combined_params.pkl\n",
+      "Loaded m699462d20240103_combined.pkl and m699462d20240103_combined_params.pkl\n",
+      "Loaded m699462d20240104_combined.pkl and m699462d20240104_combined_params.pkl\n",
+      "Loaded m699462d20240106_combined.pkl and m699462d20240106_combined_params.pkl\n",
+      "Loaded m699462d20240107_combined.pkl and m699462d20240107_combined_params.pkl\n",
+      "Loaded m699462d20240108_combined.pkl and m699462d20240108_combined_params.pkl\n",
+      "Loaded m699462d20240109_combined.pkl and m699462d20240109_combined_params.pkl\n",
+      "Loaded m699462d20240111_combined.pkl and m699462d20240111_combined_params.pkl\n",
+      "Loaded m699462d20240112_combined.pkl and m699462d20240112_combined_params.pkl\n",
+      "Loaded m699462d20240113_combined.pkl and m699462d20240113_combined_params.pkl\n",
+      "Loaded m699462d20240114_combined.pkl and m699462d20240114_combined_params.pkl\n",
+      "Loaded m699462d20240116_combined.pkl and m699462d20240116_combined_params.pkl\n",
+      "Loaded m699462d20240117_combined.pkl and m699462d20240117_combined_params.pkl\n",
+      "Loaded m699472d20231221_combined.pkl and m699472d20231221_combined_params.pkl\n",
+      "Loaded m699472d20231222_combined.pkl and m699472d20231222_combined_params.pkl\n",
+      "Loaded m699472d20240102_combined.pkl and m699472d20240102_combined_params.pkl\n",
+      "Loaded m699472d20240103_combined.pkl and m699472d20240103_combined_params.pkl\n",
+      "Loaded m699472d20240104_combined.pkl and m699472d20240104_combined_params.pkl\n",
+      "Loaded m699472d20240105_combined.pkl and m699472d20240105_combined_params.pkl\n",
+      "Loaded m699472d20240106_combined.pkl and m699472d20240106_combined_params.pkl\n",
+      "Loaded m699472d20240107_combined.pkl and m699472d20240107_combined_params.pkl\n",
+      "Loaded m699472d20240108_combined.pkl and m699472d20240108_combined_params.pkl\n",
+      "Loaded m699472d20240109_combined.pkl and m699472d20240109_combined_params.pkl\n",
+      "Loaded m699472d20240110_combined.pkl and m699472d20240110_combined_params.pkl\n",
+      "Loaded m699472d20240111_combined.pkl and m699472d20240111_combined_params.pkl\n",
+      "Loaded m699472d20240112_combined.pkl and m699472d20240112_combined_params.pkl\n",
+      "Loaded m699472d20240113_combined.pkl and m699472d20240113_combined_params.pkl\n",
+      "Loaded m699472d20240114_combined.pkl and m699472d20240114_combined_params.pkl\n",
+      "Loaded m699472d20240117_combined.pkl and m699472d20240117_combined_params.pkl\n",
+      "Loaded m701707d20231221_combined.pkl and m701707d20231221_combined_params.pkl\n",
+      "Loaded m701707d20231222_combined.pkl and m701707d20231222_combined_params.pkl\n",
+      "Loaded m701707d20240103_combined.pkl and m701707d20240103_combined_params.pkl\n",
+      "Loaded m701707d20240104_combined.pkl and m701707d20240104_combined_params.pkl\n",
+      "Loaded m701707d20240105_combined.pkl and m701707d20240105_combined_params.pkl\n",
+      "Loaded m701707d20240106_combined.pkl and m701707d20240106_combined_params.pkl\n",
+      "Loaded m701707d20240112_combined.pkl and m701707d20240112_combined_params.pkl\n",
+      "Loaded m701707d20240113_combined.pkl and m701707d20240113_combined_params.pkl\n",
+      "Loaded m701707d20240114_combined.pkl and m701707d20240114_combined_params.pkl\n",
+      "Loaded m701707d20240117_combined.pkl and m701707d20240117_combined_params.pkl\n"
+     ]
+    }
+   ],
    "source": [
     "for session in session_list:\n",
     "    get_FP_data(session, label)"
@@ -145,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -190,21 +295,10 @@
        " None,\n",
        " None,\n",
        " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
        " None]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +319,7 @@
     "        with redirect_stdout(f):  # Redirect all print statements to the file\n",
     "            print(f\"Processing {session}\")\n",
     "            try:\n",
-    "                signal_region_prep_CO, params, figs = preprocess_signal_CO(session, label, plot=True, xtol=1e-6)\n",
+    "                signal_region_prep_CO, params, figs = preprocess_signal_CO(session, label, plot=True, xtol=1e-8, methods=['tri-exp'])\n",
     "                append_FP_data(session, label, signal_region_prep_CO, params)\n",
     "                plt.close('all')\n",
     "                print(f\"Processing complete for {session}.\")\n",
